saved model as pickle file

--- a/notebook/research.ipynb
+++ b/notebook/research.ipynb
@@ -3542,8 +3542,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "8947e6a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "254       0.0\n",
+       "1733      0.0\n",
+       "1903      0.0\n",
+       "2033      0.0\n",
+       "2110      0.0\n",
+       "         ... \n",
+       "277427    0.0\n",
+       "277478    0.0\n",
+       "277639    0.0\n",
+       "278188    0.0\n",
+       "278418    0.0\n",
+       "Name: Fat Tuesday, Length: 1206, dtype: float64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_pivot.iloc[230,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "86c704f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance,suggestion=model.kneighbors(book_pivot.iloc[237,:].values.reshape(1,-1),n_neighbors=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "8b56c7cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        , 46.        , 46.18441296]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "a9b0406d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[237, 215, 338]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "suggestion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "04755a4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Fingersmith', 'Exclusive', 'Jacob Have I Loved'], dtype='object', name='title')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(suggestion)):\n",
+    "    print(book_pivot.index[suggestion[i]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "4bda7017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book_names=book_pivot.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "2186051b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['1984', '1st to Die: A Novel', '2nd Chance', '4 Blondes',\n",
+       "       '84 Charing Cross Road',\n",
+       "       'A Beautiful Mind: The Life of Mathematical Genius and Nobel Laureate John Nash',\n",
+       "       'A Bend in the Road', 'A Case of Need',\n",
+       "       'A Child Called \\It\\\": One Child's Courage to Survive\"',\n",
+       "       'A Civil Action',\n",
+       "       ...\n",
+       "       'Without Remorse', 'Wizard and Glass (The Dark Tower, Book 4)',\n",
+       "       'Women Who Run with the Wolves',\n",
+       "       'Word Freak: Heartbreak, Triumph, Genius, and Obsession in the World of Competitive Scrabble Players',\n",
+       "       'Wuthering Heights', 'Year of Wonders', 'You Belong To Me',\n",
+       "       'Zen and the Art of Motorcycle Maintenance: An Inquiry into Values',\n",
+       "       'Zoya', '\\O\\\" Is for Outlaw\"'],\n",
+       "      dtype='object', name='title', length=884)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e8194e6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'84 Charing Cross Road'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_names[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dfc025e",
    "metadata": {},
    "outputs": [],
    "source": []
