--- a/notebook/research.ipynb
+++ b/notebook/research.ipynb
@@ -3711,8 +3711,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "4dfc025e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(3)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(book_pivot.index=='4 Blondes')[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "33e53de5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids=np.where(final_rating['title']=='Fat Tuesday')[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "83554b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://images.amazon.com/images/P/0553478257.01.LZZZZZZZ.jpg'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_rating.iloc[ids]['image_url']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "65122a76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book_name=[]\n",
+    "for book_id in suggestion:\n",
+    "    book_name.append(book_pivot.index[book_id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "11c62703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Index(['Fingersmith', 'Exclusive', 'Jacob Have I Loved'], dtype='object', name='title')]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "764daff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids_index=[]\n",
+    "for name in book_name[0]:\n",
+    "    ids=np.where(final_rating['title']==name)[0][0]\n",
+    "    ids_index.append(ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "f0aa203d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.int64(1342), np.int64(985), np.int64(1075)]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "bc3677b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://images.amazon.com/images/P/1573229725.01.LZZZZZZZ.jpg\n",
+      "http://images.amazon.com/images/P/0446604232.01.LZZZZZZZ.jpg\n",
+      "http://images.amazon.com/images/P/0064403688.01.LZZZZZZZ.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in ids_index:\n",
+    "    url = final_rating.iloc[idx]['image_url']\n",
+    "    print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "1833ea00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(model,open('artifacts/model.pkl','wb'))\n",
+    "pickle.dump(book_names,open('artifacts/book_names.pkl','wb'))\n",
+    "pickle.dump(final_rating,open('artifacts/final_rating.pkl','wb'))\n",
+    "pickle.dump(book_pivot,open('artifacts/book_pivot.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87daa371",
+   "metadata": {},
+   "source": [
+    "### Testing model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "cb2d6071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_book(book_name):\n",
+    "    book_id = np.where(book_pivot.index == book_name)[0][0]\n",
+    "    distance, suggestion = model.kneighbors(book_pivot.iloc[book_id,:].values.reshape(1,-1), n_neighbors=6 )\n",
+    "    \n",
+    "    for i in range(len(suggestion)):\n",
+    "            books = book_pivot.index[suggestion[i]]\n",
+    "            for j in books:\n",
+    "                if j == book_name:\n",
+    "                    print(f\"You searched '{book_name}'\\n\")\n",
+    "                    print(\"The suggestion books are: \\n\")\n",
+    "                else:\n",
+    "                    print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "cfdba091",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You searched '2nd Chance'\n",
+      "\n",
+      "The suggestion books are: \n",
+      "\n",
+      "Courting Trouble\n",
+      "Dark Lady\n",
+      "The Undertaker's Widow\n",
+      "The Next Accident\n",
+      "Fatal Cure\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_name = \"2nd Chance\"\n",
+    "recommend_book(book_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da494d19",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "5fa94a26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting streamlit\n",
+      "  Using cached streamlit-1.46.1-py3-none-any.whl.metadata (9.0 kB)\n",
+      "Collecting altair<6,>=4.0 (from streamlit)\n",
+      "  Using cached altair-5.5.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting blinker<2,>=1.5.0 (from streamlit)\n",
+      "  Using cached blinker-1.9.0-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting cachetools<7,>=4.0 (from streamlit)\n",
+      "  Downloading cachetools-6.1.0-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting click<9,>=7.0 (from streamlit)\n",
+      "  Downloading click-8.2.1-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Requirement already satisfied: numpy<3,>=1.23 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from streamlit) (2.3.1)\n",
+      "Requirement already satisfied: packaging<26,>=20 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from streamlit) (25.0)\n",
+      "Requirement already satisfied: pandas<3,>=1.4.0 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from streamlit) (2.3.1)\n",
+      "Collecting pillow<12,>=7.1.0 (from streamlit)\n",
+      "  Downloading pillow-11.3.0-cp313-cp313-win_amd64.whl.metadata (9.2 kB)\n",
+      "Collecting protobuf<7,>=3.20 (from streamlit)\n",
+      "  Downloading protobuf-6.31.1-cp310-abi3-win_amd64.whl.metadata (593 bytes)\n",
+      "Collecting pyarrow>=7.0 (from streamlit)\n",
+      "  Using cached pyarrow-20.0.0-cp313-cp313-win_amd64.whl.metadata (3.4 kB)\n",
+      "Collecting requests<3,>=2.27 (from streamlit)\n",
+      "  Downloading requests-2.32.4-py3-none-any.whl.metadata (4.9 kB)\n",
+      "Collecting tenacity<10,>=8.1.0 (from streamlit)\n",
+      "  Using cached tenacity-9.1.2-py3-none-any.whl.metadata (1.2 kB)\n",
+      "Collecting toml<2,>=0.10.1 (from streamlit)\n",
+      "  Using cached toml-0.10.2-py2.py3-none-any.whl.metadata (7.1 kB)\n",
+      "Collecting typing-extensions<5,>=4.4.0 (from streamlit)\n",
+      "  Downloading typing_extensions-4.14.1-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting watchdog<7,>=2.1.5 (from streamlit)\n",
+      "  Using cached watchdog-6.0.0-py3-none-win_amd64.whl.metadata (44 kB)\n",
+      "Collecting gitpython!=3.1.19,<4,>=3.0.7 (from streamlit)\n",
+      "  Using cached GitPython-3.1.44-py3-none-any.whl.metadata (13 kB)\n",
+      "Collecting pydeck<1,>=0.8.0b4 (from streamlit)\n",
+      "  Using cached pydeck-0.9.1-py2.py3-none-any.whl.metadata (4.1 kB)\n",
+      "Requirement already satisfied: tornado!=6.5.0,<7,>=6.0.3 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from streamlit) (6.5.1)\n",
+      "Collecting jinja2 (from altair<6,>=4.0->streamlit)\n",
+      "  Using cached jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting jsonschema>=3.0 (from altair<6,>=4.0->streamlit)\n",
+      "  Downloading jsonschema-4.24.0-py3-none-any.whl.metadata (7.8 kB)\n",
+      "Collecting narwhals>=1.14.2 (from altair<6,>=4.0->streamlit)\n",
+      "  Downloading narwhals-1.46.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: colorama in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from click<9,>=7.0->streamlit) (0.4.6)\n",
+      "Collecting gitdb<5,>=4.0.1 (from gitpython!=3.1.19,<4,>=3.0.7->streamlit)\n",
+      "  Using cached gitdb-4.0.12-py3-none-any.whl.metadata (1.2 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from pandas<3,>=1.4.0->streamlit) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from pandas<3,>=1.4.0->streamlit) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from pandas<3,>=1.4.0->streamlit) (2025.2)\n",
+      "Collecting charset_normalizer<4,>=2 (from requests<3,>=2.27->streamlit)\n",
+      "  Using cached charset_normalizer-3.4.2-cp313-cp313-win_amd64.whl.metadata (36 kB)\n",
+      "Collecting idna<4,>=2.5 (from requests<3,>=2.27->streamlit)\n",
+      "  Using cached idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests<3,>=2.27->streamlit)\n",
+      "  Downloading urllib3-2.5.0-py3-none-any.whl.metadata (6.5 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests<3,>=2.27->streamlit)\n",
+      "  Downloading certifi-2025.7.9-py3-none-any.whl.metadata (2.4 kB)\n",
+      "Collecting smmap<6,>=3.0.1 (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit)\n",
+      "  Using cached smmap-5.0.2-py3-none-any.whl.metadata (4.3 kB)\n",
+      "Collecting MarkupSafe>=2.0 (from jinja2->altair<6,>=4.0->streamlit)\n",
+      "  Using cached MarkupSafe-3.0.2-cp313-cp313-win_amd64.whl.metadata (4.1 kB)\n",
+      "Collecting attrs>=22.2.0 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
+      "  Using cached attrs-25.3.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting jsonschema-specifications>=2023.03.6 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
+      "  Using cached jsonschema_specifications-2025.4.1-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting referencing>=0.28.4 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
+      "  Using cached referencing-0.36.2-py3-none-any.whl.metadata (2.8 kB)\n",
+      "Collecting rpds-py>=0.7.1 (from jsonschema>=3.0->altair<6,>=4.0->streamlit)\n",
+      "  Downloading rpds_py-0.26.0-cp313-cp313-win_amd64.whl.metadata (4.3 kB)\n",
+      "Requirement already satisfied: six>=1.5 in g:\\ml project\\book recommendation\\book-recommendation\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.17.0)\n",
+      "Using cached streamlit-1.46.1-py3-none-any.whl (10.1 MB)\n",
+      "Using cached altair-5.5.0-py3-none-any.whl (731 kB)\n",
+      "Using cached blinker-1.9.0-py3-none-any.whl (8.5 kB)\n",
+      "Downloading cachetools-6.1.0-py3-none-any.whl (11 kB)\n",
+      "Downloading click-8.2.1-py3-none-any.whl (102 kB)\n",
+      "Using cached GitPython-3.1.44-py3-none-any.whl (207 kB)\n",
+      "Downloading pillow-11.3.0-cp313-cp313-win_amd64.whl (7.0 MB)\n",
+      "   ---------------------------------------- 0.0/7.0 MB ? eta -:--:--\n",
+      "   ------ --------------------------------- 1.0/7.0 MB 6.9 MB/s eta 0:00:01\n",
+      "   ---------- ----------------------------- 1.8/7.0 MB 5.2 MB/s eta 0:00:01\n",
+      "   --------------- ------------------------ 2.6/7.0 MB 4.7 MB/s eta 0:00:01\n",
+      "   ------------------- -------------------- 3.4/7.0 MB 4.5 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 4.2/7.0 MB 4.4 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 5.2/7.0 MB 4.3 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 5.5/7.0 MB 4.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  6.8/7.0 MB 4.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 7.0/7.0 MB 4.1 MB/s eta 0:00:00\n",
+      "Downloading protobuf-6.31.1-cp310-abi3-win_amd64.whl (435 kB)\n",
+      "Using cached pyarrow-20.0.0-cp313-cp313-win_amd64.whl (25.7 MB)\n",
+      "Using cached pydeck-0.9.1-py2.py3-none-any.whl (6.9 MB)\n",
+      "Downloading requests-2.32.4-py3-none-any.whl (64 kB)\n",
+      "Using cached tenacity-9.1.2-py3-none-any.whl (28 kB)\n",
+      "Using cached toml-0.10.2-py2.py3-none-any.whl (16 kB)\n",
+      "Downloading typing_extensions-4.14.1-py3-none-any.whl (43 kB)\n",
+      "Using cached watchdog-6.0.0-py3-none-win_amd64.whl (79 kB)\n",
+      "Downloading certifi-2025.7.9-py3-none-any.whl (159 kB)\n",
+      "Using cached charset_normalizer-3.4.2-cp313-cp313-win_amd64.whl (105 kB)\n",
+      "Using cached gitdb-4.0.12-py3-none-any.whl (62 kB)\n",
+      "Using cached idna-3.10-py3-none-any.whl (70 kB)\n",
+      "Using cached jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
+      "Downloading jsonschema-4.24.0-py3-none-any.whl (88 kB)\n",
+      "Downloading narwhals-1.46.0-py3-none-any.whl (373 kB)\n",
+      "Downloading urllib3-2.5.0-py3-none-any.whl (129 kB)\n",
+      "Using cached attrs-25.3.0-py3-none-any.whl (63 kB)\n",
+      "Using cached jsonschema_specifications-2025.4.1-py3-none-any.whl (18 kB)\n",
+      "Using cached MarkupSafe-3.0.2-cp313-cp313-win_amd64.whl (15 kB)\n",
+      "Using cached referencing-0.36.2-py3-none-any.whl (26 kB)\n",
+      "Downloading rpds_py-0.26.0-cp313-cp313-win_amd64.whl (234 kB)\n",
+      "Using cached smmap-5.0.2-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: watchdog, urllib3, typing-extensions, toml, tenacity, smmap, rpds-py, pyarrow, protobuf, pillow, narwhals, MarkupSafe, idna, click, charset_normalizer, certifi, cachetools, blinker, attrs, requests, referencing, jinja2, gitdb, pydeck, jsonschema-specifications, gitpython, jsonschema, altair, streamlit\n",
+      "Successfully installed MarkupSafe-3.0.2 altair-5.5.0 attrs-25.3.0 blinker-1.9.0 cachetools-6.1.0 certifi-2025.7.9 charset_normalizer-3.4.2 click-8.2.1 gitdb-4.0.12 gitpython-3.1.44 idna-3.10 jinja2-3.1.6 jsonschema-4.24.0 jsonschema-specifications-2025.4.1 narwhals-1.46.0 pillow-11.3.0 protobuf-6.31.1 pyarrow-20.0.0 pydeck-0.9.1 referencing-0.36.2 requests-2.32.4 rpds-py-0.26.0 smmap-5.0.2 streamlit-1.46.1 tenacity-9.1.2 toml-0.10.2 typing-extensions-4.14.1 urllib3-2.5.0 watchdog-6.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install --upgrade streamlit\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5e9e045e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamlit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d34c2d5",
    "metadata": {},
    "outputs": [],
    "source": []
